--- a/RPG/index.html
+++ b/RPG/index.html
@@ -30,6 +30,6 @@
       </div>
   </nav>
     
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
