--- a/RPG/index.html
+++ b/RPG/index.html
@@ -2,11 +2,11 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>rpg</title>
+    <title>Recife Point Game</title>
     <link rel="stylesheet" href="/src/components/barra-superior/barra-superior.css" />
   </head>
+  
   <body>
     <div id="root"></div>
     <nav class="barra-superior">
@@ -28,8 +28,10 @@
           <div></div>
         </div>
       </div>
-  </nav>
-    
+    </nav>
+
+    <div class="w-100 h-100" id="map"></div>
+      
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
