--- a/RPG/index.html
+++ b/RPG/index.html
@@ -11,9 +11,7 @@
     <div id="root"></div>
     <nav class="barra-superior">
       <div class="esquerda">
-        <a href="#home">
-          <img src="/src/assets/logo.png" alt="Página Principal" class="logo-img" />
-        </a>
+        <img src="/src/assets/logo - conecta recife .png" alt="Logo" class="logo-img" />
       </div>
       <div class="meio">
         <a href="#mapa">Mapa</a>
