--- a/RPG/saldo.html
+++ b/RPG/saldo.html
@@ -22,7 +22,7 @@
 
 
     <script>
-      fetch('/src/components/barra-superior/index.html')
+      fetch('/index.html')
         .then(response => response.text())
         .then(html => {
           document.getElementById('barra-navegacao').innerHTML = html;
