--- a/RPG/tarefa.html
+++ b/RPG/tarefa.html
@@ -19,7 +19,7 @@
 
 
     <script>
-      fetch('/src/components/barra-superior/index.html')
+      fetch('/index.html')
         .then(response => response.text())
         .then(html => {
           document.getElementById('barra-navegacao').innerHTML = html;
