--- a/RPG/saldo.html
+++ b/RPG/saldo.html
@@ -11,6 +11,29 @@
 
     <div id ="saldo">
 
+    <div class="carrossel-container">
+      <div class="carrossel">
+        <div class="pessoa">
+          <p class="nome"></p>
+          <p class="saldo"></p>
+        </div>
+        <div class="pessoa">
+          <p class="nome"></p>
+          <p class="saldo"></p>
+        </div>
+        <div class="pessoa">
+          <p class="nome"></p>
+          <p class="saldo"></p>
+        </div>
+        <div class="pessoa">
+          <p class="nome"></p>
+          <p class="saldo"></p>
+        </div>
+      </div>
+      <button class="prev" onclick="mudarSlide(-1)">&#10094;</button>
+      <button class="next" onclick="mudarSlide(1)">&#10095;</button>
+    </div>
+
 
     </div>
 
