--- a/RPG/index.html
+++ b/RPG/index.html
@@ -14,9 +14,9 @@
         <img src="/src/assets/logo - conecta recife .png" alt="Logo" class="logo-img" />
       </div>
       <div class="meio">
-        <a href="#mapa">Mapa</a>
-        <a href="#tarefas">Minhas Tarefas</a>
-        <a href="#capibas">Capibas</a>
+        <a href="index.html">Mapa</a>
+        <a href="tarefa.html">Minhas Tarefas</a>
+        <a href="saldo.html">Capibas</a>
       </div>
       <div class="direita">
         <a href="#login" id="login">Entrar</a>
