o vector foi mas o texto n

--- a/RPG/index.html
+++ b/RPG/index.html
@@ -11,7 +11,7 @@
     <div id="root"></div>
     <nav class="barra-superior">
       <div class="esquerda">
-        <img src="/src/assets/logo - conecta recife .png" alt="Logo" class="logo-img" />
+        <img src="/src/assets/LogoConecta.png" alt="Logo" class="logo-img" />
       </div>
       <div class="meio">
         <a href="index.html">Mapa</a>
