--- a/backend/test/adicionarpinos.html
+++ b/backend/test/adicionarpinos.html
@@ -7,8 +7,8 @@
     <style>
       /* ======= ESTILOS GERAIS ======= */
       body {
-        font-family: "Segoe UI", Arial, sans-serif;
-        background: linear-gradient(135deg, #1e90ff, #00bfff);
+        font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+        background: linear-gradient(135deg, #1449c0, #1b61ff, #047eeb);
         color: #333;
         margin: 0;
         padding: 0;
@@ -21,7 +21,7 @@
       .container {
         background: #fff;
         padding: 30px 40px;
-        border-radius: 16px;
+        border-radius: 10px;
         box-shadow: 0 4px 25px rgba(0, 0, 0, 0.15);
         width: 100%;
         max-width: 420px;
@@ -29,7 +29,7 @@
       }
 
       h1 {
-        color: #0078d7;
+        color: #1449c0;
         margin-bottom: 25px;
         font-size: 1.8rem;
       }
@@ -51,7 +51,7 @@
 
       input:focus,
       textarea:focus {
-        border-color: #0078d7;
+        border-color: #1449c0;
         outline: none;
         box-shadow: 0 0 5px rgba(0, 120, 215, 0.4);
       }
@@ -64,7 +64,7 @@
       button {
         padding: 12px;
         border: none;
-        background: #0078d7;
+        background: #047eeb;
         color: #fff;
         font-weight: bold;
         border-radius: 8px;
@@ -74,13 +74,13 @@
       }
 
       button:hover {
-        background: #005fa3;
+        background: #1449c0;
       }
 
       .msg-sucesso {
-        background: #d4edda;
-        color: #155724;
-        border: 1px solid #c3e6cb;
+        background: #64ffb4;
+        color: #2f7854;
+        border: 1px solid #4dc48a;
         padding: 10px;
         border-radius: 6px;
         margin-bottom: 15px;
@@ -88,7 +88,7 @@
 
       .msg-erro {
         background: #f8d7da;
-        color: #721c24;
+        color: #7b0000;
         border: 1px solid #f5c6cb;
         padding: 10px;
         border-radius: 6px;
@@ -98,7 +98,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Adicionar Novo Pino 📍</h1>
+      <h1>Adicionar Novo Pino</h1>
 
       <!-- Mensagem de feedback -->
       <div id="mensagem"></div>
@@ -126,16 +126,19 @@
 
     <script>
       // Adiciona feedback visual sem precisar recarregar a página inteira
-      const form = document.getElementById("formPino");
-      const msgDiv = document.getElementById("mensagem");
+      const form = document.getElementById("formPino"); // seleciona o formulário
+      const msgDiv = document.getElementById("mensagem"); // seleciona a div com as mensagens de sucesso ou erro
 
+      // Impede que a página recarregue e trata o envio via javascript
       form.addEventListener("submit", async (e) => {
         e.preventDefault();
         msgDiv.innerHTML = "";
 
+        // Pega os dados preenchidos e transforma em um objeto javascript
         const formData = new FormData(form);
         const data = Object.fromEntries(formData.entries());
 
+        // Faz uma requisição POST, envia os dados como JSON, o express recebe e cria um novo pino no banco
         try {
           const res = await fetch("/api/pinos/adicionar", {
             method: "POST",
@@ -143,6 +146,7 @@
             body: JSON.stringify(data),
           });
 
+          // Mensagens de sucesso e de erro
           if (res.ok) {
             msgDiv.innerHTML =
               '<div class="msg-sucesso">✅ Pino adicionado com sucesso!</div>';
