--- a/RPG/index.html
+++ b/RPG/index.html
@@ -1,12 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recife Point Game</title>
-    <link rel="stylesheet" href="/src/components/barra-superior/barra-superior.css" />
+    <link
+      rel="stylesheet"
+      href="/src/components/barra-superior/barra-superior.css"
+    />
   </head>
-  
+
   <body>
     <div id="root"></div>
     <nav class="barra-superior">
@@ -29,7 +32,7 @@
     </nav>
 
     <div class="w-100 h-100" id="map"></div>
-      
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
