--- a/RPG/tarefa.html
+++ b/RPG/tarefa.html
@@ -4,24 +4,80 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tarefas</title>
-    <link rel="stylesheet" href="src/css/tarefa.css" />
+    <link rel="stylesheet" href="/src/css/tarefa.css" />
+    <link rel="stylesheet" href="/src/components/barra-superior/barra-superior.css" />
   </head>
 
   <body>
-    <div id="barra-navegacao"></div>
-    <div id ="tarefas-disponiveis"></div>
+    <!-- Navbar -->
+    <nav class="barra-superior">
+      <div class="esquerda">
+        <img 
+          src="/src/assets/LogoConecta.png" 
+          alt="Logo" 
+          class="logo-img"
+          onclick="window.location.href = 'index.html'"
+          style="cursor: pointer"
+        />
+      </div>
+      <div class="meio">
+        <a href="index.html">Mapa</a>
+        <a href="tarefa.html" class="ativo">Minhas Tarefas</a>
+        <a href="saldo.html">Capibas</a>
+      </div>
+      <div class="direita">
+        <a 
+          href="login.html"
+          id="login"
+        >
+          Entrar
+        </a>
+        <div class="opcoes" id="opcoes">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
+    </nav>
+
+    <div id="tarefas-disponiveis">
+      <div class="tarefas-container">
+        <h1>Minhas Tarefas</h1>
+        <div class="lista-tarefas">
+          <div class="tarefa-item">
+            <h3>📍 Parque da Jaqueira</h3>
+            <p>Visite o Parque da Jaqueira e tire uma foto no coreto</p>
+            <p class="recompensa"><strong>Recompensa: 50 capibas</strong></p>
+            <button class="btn-confirmar">Confirmar Presença</button>
+          </div>
+          <div class="tarefa-item">
+            <h3>📍 Marco Zero</h3>
+            <p>Conheça o Marco Zero do Recife e o Parque das Esculturas</p>
+            <p class="recompensa"><strong>Recompensa: 30 capibas</strong></p>
+            <button class="btn-confirmar">Confirmar Presença</button>
+          </div>
+          <div class="tarefa-item">
+            <h3>📍 Feira de Boa Viagem</h3>
+            <p>Visite a feira livre da Avenida Boa Viagem no domingo</p>
+            <p class="recompensa"><strong>Recompensa: 25 capibas</strong></p>
+            <button class="btn-confirmar">Confirmar Presença</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script>
-      fetch('/index.html')
-        .then(response => response.text())
-        .then(html => {
-          document.getElementById('barra-navegacao').innerHTML = html;
-
-          let link = document.createElement('link');
-          link.rel = 'stylesheet';
-          link.href = '/src/components/barra-superior/barra-superior.css';
-          document.head.appendChild(link);
-        })
+      // Destacar link ativo na navbar
+      document.addEventListener('DOMContentLoaded', function() {
+        const currentPage = window.location.pathname.split('/').pop();
+        const links = document.querySelectorAll('.meio a');
+        
+        links.forEach(link => {
+          if (link.getAttribute('href') === currentPage) {
+            link.classList.add('ativo');
+          }
+        });
+      });
     </script>
   </body>
 </html>
