deixei mais boitinho
é isso

--- a/RPG/saldo.html
+++ b/RPG/saldo.html
@@ -48,7 +48,7 @@
       </div>
     </div>
 
-    <script src="/src/components/barra-superior/barra-superior-loader.js"></script>
+    <script src="./src/components/barra-superior/barra-superior-loader.js"></script>
     <script>
       // Lógica do carrossel
       let slideIndex = 0;
