--- a/RPG/tarefa.html
+++ b/RPG/tarefa.html
@@ -59,7 +59,7 @@
       </div>
     </div>
 
-    <script src="/src/components/barra-superior/barra-superior-loader.js"></script>
+    <script src="./src/components/barra-superior/barra-superior-loader.js"></script>
     <script>
       function concluirTarefa(botao) {
         const tarefaItem = botao.closest('.tarefa-item');
