--- a/RPG/src/public/apagar.html
+++ b/RPG/src/public/apagar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerenciar Usuários - Recife Point Game</title>
-    <link rel="stylesheet" href="./src/css/apagar.css">
+    <link rel="stylesheet" href="../css/apagar.css">
 
 </head>
 <body>
@@ -27,11 +27,8 @@
         <div class="content">
             <!-- Navigation -->
             <div class="nav-links">
-                <a href="index.html" class="back-link">
+                <a href="../../index.html" class="back-link">
                     ← Voltar ao Mapa
-                </a>
-                <a href="admin.html" class="back-link">
-                    ⚙️ Painel Admin
                 </a>
             </div>
 
@@ -94,6 +91,6 @@
         </div>
     </div>
 
-    <script src="./src/js/apagar.js"></script>
+    <script src="../js/apagar.js"></script>
 </body>
 </html>
