--- a/RPG/src/public/tarefa.html
+++ b/RPG/src/public/tarefa.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Minhas Tarefas - Recife Point Game</title>
-    <link rel="stylesheet" href="./src/css/tarefa.css" />
+    <link rel="stylesheet" href="../css/tarefa.css" />
   </head>
   <body>
     <!-- Navbar -->
@@ -67,7 +67,7 @@
       </div>
     </div>
 
-    <script src="./src/components/barra-superior/barra-superior-loader.js"></script>
-    <script type="module" src="./src/js/tarefa.js"></script>
+    <script src="../components/barra-superior/barra-superior-loader.js"></script>
+    <script type="module" src="../js/tarefa.js"></script>
   </body>
 </html>
