--- a/RPG/src/public/saldo.html
+++ b/RPG/src/public/saldo.html
@@ -48,7 +48,7 @@
       </div>
     </div>
 
-    <script src="../components/barra-superior/barra-superior-loader.js"></script>
+    <script type="module" src="../components/barra-superior/barra-superior-loader.js"></script>
     <script src="../js/saldo.js"></script>
 
   </body>
