--- a/RPG/src/public/tarefa.html
+++ b/RPG/src/public/tarefa.html
@@ -67,7 +67,7 @@
       </div>
     </div>
 
-    <script src="../components/barra-superior/barra-superior-loader.js"></script>
+    <script type="module" src="../components/barra-superior/barra-superior-loader.js"></script>
     <script type="module" src="../js/tarefa.js"></script>
   </body>
 </html>
