--- a/RPG/index.html
+++ b/RPG/index.html
@@ -80,7 +80,7 @@
       3. index.js: Lógica específica da página inicial
     -->
     <script type="module" src="/src/main.jsx"></script>
-    <script src="/src/components/barra-superior/barra-superior-loader.js"></script>
+    <script type="module" src="/src/components/barra-superior/barra-superior-loader.js"></script>
     <script src="/src/js/index.js"></script>
   </body>
 </html>
